Quick Style Fixes

--- a/Site.Master
+++ b/Site.Master
@@ -62,7 +62,7 @@
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <ul class="nav navbar-nav navbar-right">
-                                <li>Hello, <%: Context.User.Identity.GetUserName()  %> !</li>
+                                <li style="color:aliceblue;">Hello, <%: Context.User.Identity.GetUserName()  %> !</li>
                                 <li>
                                     <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" OnLoggingOut="Unnamed_LoggingOut" />
                                 </li>
